Remove max chores
